--- a/report.yaml
+++ b/report.yaml
@@ -8,7 +8,7 @@ tags:
   - Civic Tech
 
 product_narrative: |
- Groundwork aligns capital access and decision making  within government in order to improve quality of life.
+ Rating agencies & cities don’t account for infrastructure liability. We’re putting infrastructure on the balance sheet for more accurate risk models.
 team:
   picture: E383E868-.jpg
   roster:
